根据token处理主页的访问权限问题

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "cSpell.ignoreWords": [
-        "educationalsystem"
+        "educationalsystem",
+        "nprogress",
+        "引入进度条样式"
     ]
 }
