暂时合并动态和静态路由

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.ignoreWords": [
         "Coures",
+        "Mesg",
         "educationalsystem",
         "nprogress",
         "引入进度条样式"
