--- a/educationalSystem/package.json
+++ b/educationalSystem/package.json
@@ -25,7 +25,8 @@
     "vue": "2.6.10",
     "vue-print-nb": "^1.7.5",
     "vue-router": "3.0.6",
-    "vuex": "3.1.0"
+    "vuex": "3.1.0",
+    "xlsx": "^0.17.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "4.4.4",
