--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,9 @@
     "cSpell.ignoreWords": [
         "Coures",
         "Mesg",
+        "Ruan",
         "educationalsystem",
+        "guang",
         "nprogress",
         "引入进度条样式"
     ]
