--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.ignoreWords": [
         "Coures",
+        "Enduit",
         "Mesg",
         "Ruan",
         "educationalsystem",
