--- a/educationalSystem/package.json
+++ b/educationalSystem/package.json
@@ -27,6 +27,7 @@
     "vue-print-nb": "^1.7.5",
     "vue-router": "3.0.6",
     "vuex": "3.1.0",
+    "wangeditor": "^4.7.10",
     "xlsx": "^0.17.4"
   },
   "devDependencies": {
