--- a/educationalSystem/package.json
+++ b/educationalSystem/package.json
@@ -25,9 +25,9 @@
     "path-to-regexp": "2.4.0",
     "vue": "2.6.10",
     "vue-print-nb": "^1.7.5",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "3.0.6",
     "vuex": "3.1.0",
-    "wangeditor": "^4.7.10",
     "xlsx": "^0.17.4"
   },
   "devDependencies": {
