--- a/educationalSystem/package.json
+++ b/educationalSystem/package.json
@@ -17,6 +17,7 @@
     "axios": "0.18.1",
     "core-js": "3.6.5",
     "cos-js-sdk-v5": "^1.3.1",
+    "echarts": "^5.2.2",
     "element-ui": "2.13.2",
     "file-saver": "^2.0.5",
     "js-cookie": "2.2.0",
