--- a/educationalSystem/package.json
+++ b/educationalSystem/package.json
@@ -26,6 +26,7 @@
     "path-to-regexp": "2.4.0",
     "screenfull": "^5.1.0",
     "vue": "2.6.10",
+    "vue-i18n": "^8.14.1",
     "vue-print-nb": "^1.7.5",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "3.0.6",
