--- a/educationalSystem/package.json
+++ b/educationalSystem/package.json
@@ -31,6 +31,7 @@
     "vue-quill-editor": "^3.0.6",
     "vue-router": "3.0.6",
     "vuex": "3.1.0",
+    "webpack-dev-server": "^2.9.1",
     "xlsx": "^0.17.4"
   },
   "devDependencies": {
@@ -57,6 +58,7 @@
     "serve-static": "1.13.2",
     "svg-sprite-loader": "4.1.3",
     "svgo": "1.2.2",
+    "terser": "^3.14.1",
     "vue-template-compiler": "2.6.10"
   },
   "browserslist": [
