--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,6 @@
         "nprogress",
         "wechat",
         "引入进度条样式"
-    ]
+    ],
+    "compile-hero.disable-compile-files-on-did-save-code": false
 }
